kubectl/kube-template/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}
spec:
  type: ${K8S_SERVICE_TYPE}
  ports:
  - port: ${APP_CONTAINER_PORT}
    targetPort: ${APP_CONTAINER_PORT}
    nodePort: ${APP_NODE_PORT}
    protocol: TCP
  selector:
    app: ${APP_NAME}
